:nail_care: Fix line wrapping of sender/recipient
... in My invoices

--- a/invoice/client/src/index.css
+++ b/invoice/client/src/index.css
@@ -22,3 +22,7 @@ table tr th:last-child,
 table tr td:last-child {
   text-align: right;
 }
+
+table tr td:first-child {
+  white-space: nowrap;
+}
